Convert to Remix + Tailwind app with all 11 articles

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "buildCommand": null,
-  "outputDirectory": "public",
-  "cleanUrls": true
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    }
+  ]
 }
