Revert to static HTML site - all 11 articles, working nav filters, submit page

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 node_modules
-
 /.cache
 /build
 .env
-
 .DS_Store
+.vercel
 old-site
 public-backup
 public-data
+package-lock.json
+app/
+postcss.config.*
+tailwind.config.*
+tsconfig.json
+vite.config.*
+react-router.config.*
+package.json
